--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.7)
-project(reverse)
+project(reverse1)
 
 set(CMAKE_CXX_STANDARD 11)
 
@@ -10,6 +10,6 @@ set(SOURCE_FILES
         reverse/player.cpp
         reverse/player.h
         reverse/Socket.cpp
-        reverse/Socket.h)
+        reverse/Socket.h reverse/playerbase.cpp reverse/playerbase.h reverse/game.cpp reverse/game.h reverse/human.cpp reverse/human.h)
 
-add_executable(reverse ${SOURCE_FILES})
+add_executable(reverse1 ${SOURCE_FILES})
